[metadata]
name = autotorrent2
version = 1.0.1
author = John
description = Torrent lifecycle management tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johndoee/autotorrent2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    libtc >=1.2.3,<2
    toml >=0.10.1,<0.10.99
    appdirs >=1.4.4,<2
    click >=8.0.0,<9
    chardet >=4.0.0,<5

[options.extras_require]
test =
    pytest >=6.0.1
docs =
    mkdocs ==1.3.0
    mkdocs-click ==0.7.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    at2 = autotorrent.__main__:cli